--- a/app/views/bike_specs/_form.html.erb
+++ b/app/views/bike_specs/_form.html.erb
@@ -10,6 +10,7 @@
       </ul>
     </div>
   <% end %>
+  <h1> General Info</h1>
   <div class="field">
     <%= f.label :year %>
     <%= f.text_field :year %>
@@ -52,10 +53,11 @@
       </ul>
     <%end%>
   <% end %>
-  <div class="field">
+  <h2> Basic Info </h2>
+ 
     <%= f.label :top_speed %>
     <%= f.text_field :top_speed %> kmph
-  </div>
+
   <div class="field">
     <%= f.label :fuel_consumption_city  %>
     <%= f.text_field :fuel_consumption_city  %> kmpl 
@@ -64,86 +66,181 @@
     <%= f.label :fuel_consumption_highway%>
     <%= f.text_field :fuel_consumption_highway   %> kmpl
   </div>
+  <h2> Engine and Transmission</h2>
   <div class="field">
     <%= f.label :displacement%>
-    <%= f.text_field :displacement   %> cc
+    <%= f.text_field :displacement   %>
   </div>
   <div class="field">
-    <%= f.label :engine  %>
+    <%= f.label :engine_type %>
     <%= f.text_field :engine   %>
   </div>
   <div class="field">
-    <%= f.label :max_power  %>
+    <%= f.label :power  %>
     <%= f.text_field :max_power  %>
   </div>
   <div class="field">
-    <%= f.label :max_torque  %>
+    <%= f.label :torque  %>
     <%= f.text_field :max_torque  %>
   </div>
-  <div class="field">
-    <%= f.label :transmission  %>
-    <%= f.text_field :transmission   %>
-  </div>
-  <div class="field">
-    <%= f.label :clutch  %>
-    <%= f.text_field :clutch  %>
-  </div>
-  <div class="field">
-    <%= f.label :bore  %>
+    <div class="field">
+    <%= f.label :compression  %>
     <%= f.text_field :bore   %>
   </div>
-  <div class="field">
-    <%= f.label :stroke  %>
+    <div class="field">
+    <%= f.label :bore_and_stroke  %>
     <%= f.text_field :stroke   %>
   </div>
-  <div class="field">
-    <%= f.label :no_of_cylinders  %>
-    <%= f.number_field :no_of_cylinders  %>
-  </div>
+ 
   <div class="field">
     <%= f.label :valve_per_cylinder  %>
     <%= f.number_field :valve_per_cylinder  %>
   </div>
-  <div class="field">
-    <%= f.label :chassis_type  %>
-    <%= f.text_field :chassis_type   %>
+   <div class="field">
+    <%= f.label :fuel_system  %>
+    <%= f.text_field :no_of_cylinders  %>
   </div>
-  <div class="field">
-    <%= f.label :cooling_type %>
-    <%= f.text_field :cooling_type   %> 
+      <div class="field">
+    <%= f.label :fuel_control  %>
+    <%= f.text_field :fuel_control  %>
   </div>
-  <b>DIMENSIONS</b>
-  <div class="field">
-    <%= f.label :length  %>
-    <%= f.text_field :length  %> mm
-  </div>
-  <div class="field">
-    <%= f.label :width  %>
-    <%= f.text_field :width  %> mm
-  </div>
-  <div class="field">
-    <%= f.label :height %>
-    <%= f.text_field :height  %> mm
+    <div class="field">
+    <%= f.label :ignition %>
+    <%= f.text_field :ignition  %>
   </div>
 
-<b> OTHER SPECIFICATIONS</b>
-   
+    <div class="field">
+    <%= f.label :lubrication_system  %>
+    <%= f.text_field :lubrication  %>
+  </div>
+<div class="field">
+    <%= f.label :cooling_system %>
+    <%= f.text_field :cooling_type   %> 
+  </div>
   <div class="field">
-    <%= f.label :weight  %>
+    <%= f.label :gearbox  %>
+    <%= f.text_field :transmission   %>
+  </div>
+    <div class="field">
+    <%= f.label :transmission_type_final_drive  %>
+    <%= f.text_field :transmission_type  %>
+  </div>
+    <div class="field">
+    <%= f.label :driveline  %>
+    <%= f.text_field :clutch  %>
+  </div>
+      <div class="field">
+    <%= f.label :exhaust_system  %>
+    <%= f.text_field :exhaust  %>
+  </div>
+  <h2>Chasis, Suspension, Brakes and wheels</h2>
+  
+
+  
+  
+  <div class="field">
+    <%= f.label :frame_type  %>
+    <%= f.text_field :chassis_type   %>
+  </div>
+        <div class="field">
+    <%= f.label :rake_fork_angle  %>
+    <%= f.text_field :rake  %>
+  </div>
+        <div class="field">
+    <%= f.label :trail  %>
+    <%= f.text_field :trail  %>
+  </div>
+  <div class="field">
+    <%= f.label :suspension_front%>
+    <%= f.text_field :suspension_front  %>
+  </div>
+          <div class="field">
+    <%= f.label :front_suspension_travel  %>
+    <%= f.text_field :fs_travel  %>
+  </div>
+  <div class="field">
+    <%= f.label :suspension_rear%>
+    <%= f.text_field :suspension_rear  %>
+  </div>
+          <div class="field">
+    <%= f.label :rear_suspension_travel  %>
+    <%= f.text_field :rs_travel  %>
+  </div>
+   <div class="field">
+    <%= f.label :front_tyre_dimension %>
+    <%= f.text_field :wheel_type  %>
+  </div>
+  <div class="field">
+    <%= f.label :rear_tyre_dimension %>
+    <%= f.text_field :wheel_size  %>
+  </div>
+
+ <div class="field">
+    <%= f.label :brakes_front%>
+    <%= f.text_field :brakes_front  %>
+  </div>
+          <div class="field">
+    <%= f.label :front_brake_diameter  %>
+    <%= f.text_field :fb_diameter  %>
+  </div>
+  <div class="field">
+    <%= f.label :brakes_rear %>
+    <%= f.text_field :brakes_rear  %>
+  </div>
+          <div class="field">
+    <%= f.label :rear_brake_diameter  %>
+    <%= f.text_field :rb_diameter  %>
+  </div>
+  <h2>Physical Measures and Capacities</h2>
+  <div class="field">
+    <%= f.label :dry_weight  %>
     <%= f.text_field :weight  %> kg
   </div>
+
+        <div class="field">
+    <%= f.label :weight_incl_oil_gas_etc  %>
+    <%= f.text_field :g_weight %>
+  </div>
+          <div class="field">
+    <%= f.label :power_weight_ratio  %>
+    <%= f.text_field :pw_ratio  %>
+  </div>
+        <div class="field">
+    <%= f.label :seat_height  %>
+    <%= f.text_field :seat_height  %>
+  </div>
+    
+    <div class="field">
+    <%= f.label :height %>
+    <%= f.text_field :height  %> 
+  </div>
+    <div class="field">
+    <%= f.label :length  %>
+    <%= f.text_field :length  %> 
+  </div>
+    <div class="field">
+    <%= f.label :width  %>
+    <%= f.text_field :width  %> 
+  </div>
+
   <div class="field">
     <%= f.label :ground_clearance  %>
-    <%= f.text_field :ground_clearance  %> mm
+    <%= f.text_field :ground_clearance  %> 
   </div>
-  <div class="field">
-    <%= f.label :fuel_tank %>
-    <%= f.text_field :fuel_tank  %> ltrs
-  </div>
-  <div class="field">
+    <div class="field">
     <%= f.label :wheelbase %>
-    <%= f.text_field :wheelbase  %> mm
+    <%= f.text_field :wheelbase  %> 
   </div>
+  <div class="field">
+    <%= f.label :fuel_capacity %>
+    <%= f.text_field :fuel_tank  %> 
+  </div>
+<h2> OTHER SPECIFICATIONS</h2>
+   
+  
+
+
+
   <div class="field">
     <%= f.label :headlamp %>
     <%= f.text_field :headlamp  %>
@@ -160,52 +257,20 @@
     <%= f.label :battery_capacity %>
     <%= f.text_field :battery_capacity  %> Ah
   </div>
-  <div class="field">
-    <%= f.label :wheel_type %>
-    <%= f.text_field :wheel_type  %>
-  </div>
-  <div class="field">
-    <%= f.label :wheel_size %>
-    <%= f.text_field :wheel_size  %>
-  </div>
-  <div class="field">
+   <div class="field">
     <%= f.label :tyre_type  %>
     <%= f.text_field :tyre_type  %>
   </div>
-
-<b> ACTIVE AND PASSIVE SAFETY</b>
-
-  <div class="field">
-    <%= f.label :suspension_front%>
-    <%= f.text_field :suspension_front  %>
-  </div>
-  <div class="field">
-    <%= f.label :suspension_rear%>
-    <%= f.text_field :suspension_rear  %>
-  </div>
-  <div class="field">
-    <%= f.label :brakes_front%>
-    <%= f.text_field :brakes_front  %>
-  </div>
-  <div class="field">
-    <%= f.label :brakes_rear %>
-    <%= f.text_field :brakes_rear  %>
-  </div>
-  <div class="field">
+<div class="field">
     <%= f.label :stand_alarm %>
     <%= f.text_field :stand_alarm  %>
   </div>
-
-<b> COMFORT AND CONVENIENCE</b>
 
   <div class="field">
     <%= f.label :fuel_gauge %>
     <%= f.text_field :fuel_gauge  %>
   </div>
-  <div class="field">
-    <%= f.label :ignition %>
-    <%= f.text_field :ignition  %>
-  </div>
+
   <div class="field">
     <%= f.label :tacho_meter %>
     <%= f.text_field :tacho_meter  %>
