--- a/app/views/bikes/_form.html.erb
+++ b/app/views/bikes/_form.html.erb
@@ -1,30 +1,40 @@
 <!--Indentation Complete-->
 
 <%= form_for @bike, :html => { :multipart => true,:class => 'form-horizontal' } do |f| %>
+<% if !@bike.errors.full_messages.empty? %>
+
+<div class = "alert alert-error">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+<% @bike.errors.full_messages.each do |msg| %>
+<p><%= msg %></p>
+
+<%end%>
+</div>
+<%end%>
   <div class = "row">  
     <div class= "span6">
       <div class="control-group">
         <label class="control-label" for="bike_year">Year *</label>
         <div class="controls">
-          <%= f.select :year,BikeSpec.all.distinct(:year), as: :select,:prompt => 'Select Year',:required => true  %>
+          <%= f.select :year, BikeSpec.all.distinct(:year).sort.reverse, as: :select,:prompt => 'Select Year',:required => true  %>
         </div>
       </div>
       <div class="control-group">
         <label class="control-label" for="bike_make">Make *</label>
         <div class="controls">
-           <%= f.select :make, BikeSpec.all.distinct(:make), as: :select,:prompt => 'Select Make',:required => true%>
+           <%= f.select :make, BikeSpec.all.distinct(:make).sort, as: :select,:prompt => 'Select Make',:required => true%>
         </div>
       </div>
       <div class="control-group">
         <label class="control-label" for="bike_model">Model *</label>
         <div class="controls">
-          <%= f.select :model, BikeSpec.all.distinct(:model), as: :select,:prompt => 'Select model' %>
+          <%= f.select :model, BikeSpec.all.distinct(:model).sort, as: :select,:prompt => 'Select model' %>
         </div>
       </div>
       <div class="control-group">
         <%= f.label :variant, :class => 'control-label' %>
         <div class="controls">
-         <%= f.select :variant, BikeSpec.all.distinct(:variant), as: :select,:prompt => 'Select variant'%>
+         <%= f.select :variant, BikeSpec.all.distinct(:variant).sort, as: :select,:prompt => 'Select variant'%>
         </div>
       </div>
       <div class="control-group">
@@ -64,7 +74,7 @@
       <div class="control-group">
         <label class="control-label" for="bike_type">Type *</label>
           <div class="controls">
-          <%= f.select :type, options_for_select(["Dealer New", "Dealer Used", "Private Seller"]),:required => true,:prompt => 'Select Type' %>
+          <%= f.select :type, options_for_select(["Dealer New", "Dealer Used", "Private Seller"]),:required => true, :prompt => 'Select Type' %>
         </div>
       </div>
       <div class="control-group">
@@ -147,12 +157,12 @@
       </div>
       
       <div class="form-actions">
-        <%if !params[:id].nil? and @bike.user == current_user %>
+        <%if params[:id].nil? or @bike.user == current_user %>
     
         <%= f.submit nil, :class => 'btn btn-primary' %>
 
         <%end%>
-        <%if !@bike.validated? %>
+        <%if !params[:id].nil? and !@bike.validated? %>
     
           <%= f.submit "Submit and Validate", :class => 'btn btn-primary' %>
 
@@ -258,13 +268,16 @@
     {
       str = $(this).text();
     });
-
+    $("select#bike_year option:selected").each(function () 
+    {
+      year = $(this).text();
+    });
     var option_variant = $('<option></option>').attr("value", "").text("Select Variant");
     $("select#bike_variant").append(option_variant);
     $.ajax(
     {
       url: "<%=change_variant_bikes_path%>",
-      data: {model:str },
+      data: {model:str,year:year },
       success:"True",
     });
   });
@@ -296,4 +309,5 @@
   {
     $(this).css( "opacity", "1" );
   });
+ 
 </script>
