--- a/app/views/bike_specs/_search_bikes.html.erb
+++ b/app/views/bike_specs/_search_bikes.html.erb
@@ -26,10 +26,10 @@
                     Body: <%=bike.body%>  
                   </li>
                   <li>
-                    Top Speed: <%=bike.top_speed%> km/h
+                    Top Speed: <%=bike.top_speed%> 
                   </li>
                   <li>
-                    Engine Displacement: <%=bike.displacement%> cc
+                    Engine Displacement: <%=bike.displacement%> 
                   </li>
                   <li>
                     Max Power: <%=bike.max_power%> 
