--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -146,6 +146,14 @@
       $("div.logo").animate({
         textIndent: width,
       }, 3600 );
+      (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.async= true;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=637463949617048";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
     </script>    
 
     <div class="navbar navbar-fixed-bottom">
