--- a/app/views/bikes/_form.html.erb
+++ b/app/views/bikes/_form.html.erb
@@ -52,7 +52,7 @@
       <div class="control-group">
         <label class="control-label" for="bike_city">City *</label>
         <div class="controls">
-         <%= f.select :location, options_for_select(["Kathmandu", "Latitpur", "Bhaktapur"]),:prompt => 'Select City',:class => "required" %>
+         <%= f.select :location, options_for_select(["Bhaktapur", "Kathmandu", "Latitpur"]),:prompt => 'Select City',:class => "required" %>
         </div>
       </div>
       <div class="control-group">
